--- a/02-regression/homework.ipynb
+++ b/02-regression/homework.ipynb
@@ -799,7 +799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 48,
    "id": "f30f3fc3-3b7e-4022-8ece-39e1c299aa70",
    "metadata": {},
    "outputs": [
@@ -807,7 +807,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1728, 3)\n",
+      "(1296, 3)\n",
+      "(432, 4)\n",
       "(432, 3)\n"
      ]
     }
@@ -818,24 +819,29 @@
     "np.random.seed(9)\n",
     "np.random.shuffle(idx)\n",
     "\n",
-    "df_train = df.iloc[idx[:n_train + n_val]]\n",
+    "df_train = df.iloc[idx[:n_train]]\n",
+    "df_val = df.iloc[idx[n_train: n_train + n_val]]\n",
     "df_test = df.iloc[idx[n_train + n_val:]]\n",
     "\n",
     "df_train = df_train.reset_index(drop = True)\n",
+    "df_val = df_val.reset_index(drop = True)\n",
     "df_test = df_test.reset_index(drop = True)\n",
     "\n",
     "y_train = df_train.final_price.values\n",
+    "y_val = df_val.final_price.values\n",
     "y_test = df_test.final_price.values\n",
     "\n",
     "del df_train['final_price']\n",
     "del df_test['final_price']\n",
+    "\n",
     "print (df_train.shape)\n",
+    "print (df_val.shape)\n",
     "print (df_test.shape)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 49,
    "id": "4b708950-0ae3-4fa2-b2d6-833bef18d892",
    "metadata": {},
    "outputs": [
@@ -848,9 +854,14 @@
     }
    ],
    "source": [
+    "df_full_train = pd.concat([df_train, df_val])\n",
+    "df_full_train = df_full_train.reset_index(drop=True)\n",
+    "\n",
+    "y_full_train = np.concatenate([y_train, y_val])\n",
+    "\n",
     "# filling misisng value of screen with zero\n",
-    "X_train = prepare_X(df_train)\n",
-    "w0, w = train_linear_regression_reg(X_train, y_train, r = 0.001)\n",
+    "X_full_train = prepare_X(df_full_train)\n",
+    "w0, w = train_linear_regression_reg(X_train, y_full_train, r = 0.001)\n",
     "\n",
     "X_test = prepare_X(df_test)\n",
     "y_pred = w0 + X_test.dot(w)\n",
