Fix error related to splitting of data in train, val and test

--- a/03-classification/homework.ipynb
+++ b/03-classification/homework.ipynb
@@ -1146,7 +1146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_train, df_val = train_test_split(df_full_train, test_size=0.2, random_state=42)"
+    "df_train, df_val = train_test_split(df_full_train, test_size=0.25, random_state=42)"
    ]
   },
   {
@@ -1158,7 +1158,7 @@
     {
      "data": {
       "text/plain": [
-       "(45211, 28934, 7234, 9043)"
+       "(45211, 27126, 9042, 9043)"
       ]
      },
      "execution_count": 25,
@@ -2164,7 +2164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 43,
    "id": "a56cddee-0d98-47f3-bd7b-14089bd7331f",
    "metadata": {},
    "outputs": [],
@@ -2175,7 +2175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 44,
    "id": "db78ee5c-a1f0-424e-939c-96c780462866",
    "metadata": {},
    "outputs": [
@@ -2183,7 +2183,7 @@
      "data": {
       "text/plain": [
        "poutcome     0.03\n",
-       "month        0.02\n",
+       "month        0.03\n",
        "contact      0.01\n",
        "housing      0.01\n",
        "job          0.01\n",
@@ -2192,7 +2192,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2204,7 +2204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 45,
    "id": "29595657-17a4-494d-9dd0-da4d7385fd37",
    "metadata": {},
    "outputs": [],
@@ -2214,7 +2214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 46,
    "id": "c6d6e4ba-66cf-4d08-bf68-634b5b04d414",
    "metadata": {},
    "outputs": [],
@@ -2225,7 +2225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 47,
    "id": "4aa3d707-de5b-489e-85f2-eb170e3cf837",
    "metadata": {},
    "outputs": [],
@@ -2235,7 +2235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 48,
    "id": "df4c866d-5b70-463c-a145-22d3c35ae4a8",
    "metadata": {},
    "outputs": [],
@@ -2245,30 +2245,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 49,
    "id": "0862b26f-1ff1-4a56-98e6-1e8cccf37582",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'job': 'management',\n",
-       " 'marital': 'married',\n",
+       "{'job': 'technician',\n",
+       " 'marital': 'single',\n",
        " 'education': 'tertiary',\n",
        " 'housing': 'yes',\n",
        " 'contact': 'cellular',\n",
-       " 'month': 'nov',\n",
+       " 'month': 'aug',\n",
        " 'poutcome': 'unknown',\n",
-       " 'age': 36,\n",
-       " 'balance': -485,\n",
-       " 'day': 19,\n",
-       " 'duration': 278,\n",
+       " 'age': 32,\n",
+       " 'balance': 1100,\n",
+       " 'day': 11,\n",
+       " 'duration': 67,\n",
        " 'campaign': 1,\n",
        " 'pdays': -1,\n",
        " 'previous': 0}"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2279,7 +2279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 50,
    "id": "94fc1e59-bfd2-41e5-8a29-cbb3d7db1b49",
    "metadata": {},
    "outputs": [],
@@ -2289,7 +2289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 51,
    "id": "d20deff7-a6d9-46d8-9cc2-3ef1994bc971",
    "metadata": {},
    "outputs": [],
@@ -2299,7 +2299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 52,
    "id": "16a2012b-44ac-490d-b11d-ef3af4f6b85d",
    "metadata": {},
    "outputs": [],
@@ -2309,7 +2309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 53,
    "id": "c1660d55-c2e7-4252-af1f-9687ac8057b1",
    "metadata": {},
    "outputs": [],
@@ -2319,7 +2319,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 54,
    "id": "4efabe9c-3b99-452f-900e-949f413d1a4a",
    "metadata": {},
    "outputs": [
@@ -2736,7 +2736,7 @@
        "LogisticRegression(max_iter=1000, random_state=42, solver='liblinear')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2748,17 +2748,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 55,
    "id": "f680db99-88d4-4c57-b15a-2b83fc4fec3a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-0.9569770481476176"
+       "-0.8792389505248069"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2769,7 +2769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 56,
    "id": "4ff63ccb-3c58-46c8-8740-a34c76d5175c",
    "metadata": {},
    "outputs": [
@@ -2779,7 +2779,7 @@
        "47"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2790,7 +2790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 57,
    "id": "f554c75b-f257-4816-9449-bdf601076c8a",
    "metadata": {},
    "outputs": [
@@ -2800,7 +2800,7 @@
        "47"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2811,28 +2811,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 58,
    "id": "0f456cb3-f833-4a1d-8916-d2f966656a36",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([-1.11045404e-03,  1.00564988e-05, -8.42926647e-02,  2.69344331e-01,\n",
-       "        1.18895980e-01, -1.34521736e+00,  6.94752297e-03,  4.13800361e-03,\n",
-       "       -4.65326676e-01, -2.49571876e-01, -3.95694763e-02, -2.02509020e-01,\n",
-       "       -1.18134958e-01, -8.38842090e-01,  8.52320980e-02, -2.37508610e-01,\n",
-       "       -2.89497465e-01, -3.40636894e-01, -8.72487974e-02,  2.95633416e-01,\n",
-       "       -2.12016725e-01, -1.48421355e-01,  3.04990862e-01, -1.56973283e-01,\n",
-       "       -2.85590569e-02, -1.41971237e-01, -3.05622351e-01, -4.61330336e-01,\n",
-       "       -1.90024361e-01,  1.49816423e-02, -7.20886259e-01,  3.74559531e-01,\n",
-       "       -3.08456286e-01, -1.11779949e+00, -9.84200262e-01,  3.11685247e-01,\n",
-       "        1.36334526e+00, -5.29369995e-01, -9.60288934e-01,  8.47145453e-01,\n",
-       "        7.52307047e-01, -5.54022502e-04, -7.91280988e-01, -6.53256464e-01,\n",
-       "        1.49678700e+00, -1.00922659e+00,  7.34208065e-03])"
+       "array([-2.71171955e-03,  1.21738461e-05, -7.88686541e-02,  2.46572072e-01,\n",
+       "        6.95511741e-02, -1.19536220e+00,  5.97308080e-03,  4.08481226e-03,\n",
+       "       -4.11972263e-01, -2.32401215e-01, -6.48439965e-02, -1.70021476e-01,\n",
+       "       -8.24023113e-02, -7.96836639e-01,  7.15229190e-02, -2.52766520e-01,\n",
+       "       -2.30763113e-01, -2.59812607e-01, -8.86164468e-02,  3.55258276e-01,\n",
+       "       -2.62225207e-01, -1.62701473e-01,  2.26552189e-01, -1.66761083e-01,\n",
+       "        9.22216828e-03, -1.18148053e-01, -2.86332070e-01, -4.41292059e-01,\n",
+       "       -1.51614821e-01,  1.01949052e-01, -6.51767165e-01,  2.90379198e-01,\n",
+       "       -3.04667775e-01, -8.59502094e-01, -9.18835981e-01,  2.42379611e-01,\n",
+       "        1.15815994e+00, -4.64129359e-01, -8.66970867e-01,  7.14756993e-01,\n",
+       "        6.79009501e-01, -9.52265700e-04, -7.44126740e-01, -5.09503957e-01,\n",
+       "        1.49853471e+00, -1.12414296e+00,  4.14436587e-03])"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2843,7 +2843,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 59,
    "id": "8052a7de-d5f7-459c-b096-0fd464b423bd",
    "metadata": {},
    "outputs": [
@@ -2853,7 +2853,7 @@
        "array([0, 0, 0, ..., 0, 1, 0])"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2864,23 +2864,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 60,
    "id": "a9dddb3c-144b-420a-959a-9a16047f1d5a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.94932716, 0.05067284],\n",
-       "       [0.98593168, 0.01406832],\n",
-       "       [0.92428448, 0.07571552],\n",
+       "array([[0.96772164, 0.03227836],\n",
+       "       [0.96612486, 0.03387514],\n",
+       "       [0.93574094, 0.06425906],\n",
        "       ...,\n",
-       "       [0.99149133, 0.00850867],\n",
-       "       [0.23891672, 0.76108328],\n",
-       "       [0.86182184, 0.13817816]])"
+       "       [0.99020781, 0.00979219],\n",
+       "       [0.24269835, 0.75730165],\n",
+       "       [0.8640491 , 0.1359509 ]])"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2891,7 +2891,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 61,
    "id": "10b788b2-8790-4e63-b498-38a0c1092734",
    "metadata": {},
    "outputs": [],
@@ -2901,17 +2901,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 62,
    "id": "221f6e3e-3c04-42be-b982-596a8e1ebfdb",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([False, False, False, ...,  True, False,  True])"
+       "array([False, False, False, ..., False, False, False])"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2923,7 +2923,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 63,
    "id": "fb06656e-6e79-45b9-b371-77ead7534889",
    "metadata": {},
    "outputs": [
@@ -2943,30 +2943,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 64,
    "id": "bd448e3a-3fcb-46a6-9ee6-2eeeab75b3f9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'job': 0.9011611833010782,\n",
-       " 'marital': 0.902267072159248,\n",
-       " 'education': 0.9011611833010782,\n",
-       " 'housing': 0.9025435443737905,\n",
-       " 'contact': 0.9025435443737905,\n",
-       " 'month': 0.899778822228366,\n",
-       " 'poutcome': 0.8939729057229748,\n",
-       " 'age': 0.9008847110865358,\n",
-       " 'balance': 0.9011611833010782,\n",
-       " 'day': 0.9017141277301631,\n",
-       " 'duration': 0.8888581697539397,\n",
-       " 'campaign': 0.9018523638374344,\n",
-       " 'pdays': 0.9021288360519768,\n",
-       " 'previous': 0.9012994194083495}"
+       "{'job': 0.9012386640123866,\n",
+       " 'marital': 0.9006856890068569,\n",
+       " 'education': 0.9006856890068569,\n",
+       " 'housing': 0.9015704490157045,\n",
+       " 'contact': 0.900464499004645,\n",
+       " 'month': 0.8996903339969033,\n",
+       " 'poutcome': 0.8932758239327583,\n",
+       " 'age': 0.9011280690112807,\n",
+       " 'balance': 0.9014598540145985,\n",
+       " 'day': 0.9010174740101747,\n",
+       " 'duration': 0.8901791639017916,\n",
+       " 'campaign': 0.900575094005751,\n",
+       " 'pdays': 0.9006856890068569,\n",
+       " 'previous': 0.9012386640123866}"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2992,7 +2992,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 65,
    "id": "6f644c8d-f20d-4929-97df-42f156977c5c",
    "metadata": {},
    "outputs": [
@@ -3023,74 +3023,74 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>job</th>\n",
-       "      <td>0.901161</td>\n",
-       "      <td>0.000138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>education</th>\n",
-       "      <td>0.901161</td>\n",
-       "      <td>0.000138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>balance</th>\n",
-       "      <td>0.901161</td>\n",
-       "      <td>0.000138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>age</th>\n",
-       "      <td>0.900885</td>\n",
-       "      <td>0.000138</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>previous</th>\n",
-       "      <td>0.901299</td>\n",
-       "      <td>0.000276</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>day</th>\n",
-       "      <td>0.901714</td>\n",
-       "      <td>0.000691</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>campaign</th>\n",
-       "      <td>0.901852</td>\n",
-       "      <td>0.000829</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>pdays</th>\n",
-       "      <td>0.902129</td>\n",
-       "      <td>0.001106</td>\n",
+       "      <td>0.901017</td>\n",
+       "      <td>0.000111</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>marital</th>\n",
-       "      <td>0.902267</td>\n",
-       "      <td>0.001244</td>\n",
+       "      <td>0.900686</td>\n",
+       "      <td>0.000221</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>month</th>\n",
-       "      <td>0.899779</td>\n",
-       "      <td>0.001244</td>\n",
+       "      <th>education</th>\n",
+       "      <td>0.900686</td>\n",
+       "      <td>0.000221</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>housing</th>\n",
-       "      <td>0.902544</td>\n",
-       "      <td>0.001521</td>\n",
+       "      <th>pdays</th>\n",
+       "      <td>0.900686</td>\n",
+       "      <td>0.000221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>age</th>\n",
+       "      <td>0.901128</td>\n",
+       "      <td>0.000221</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>campaign</th>\n",
+       "      <td>0.900575</td>\n",
+       "      <td>0.000332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>job</th>\n",
+       "      <td>0.901239</td>\n",
+       "      <td>0.000332</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>previous</th>\n",
+       "      <td>0.901239</td>\n",
+       "      <td>0.000332</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>contact</th>\n",
-       "      <td>0.902544</td>\n",
-       "      <td>0.001521</td>\n",
+       "      <td>0.900464</td>\n",
+       "      <td>0.000442</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>balance</th>\n",
+       "      <td>0.901460</td>\n",
+       "      <td>0.000553</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>housing</th>\n",
+       "      <td>0.901570</td>\n",
+       "      <td>0.000664</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>month</th>\n",
+       "      <td>0.899690</td>\n",
+       "      <td>0.001217</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>poutcome</th>\n",
-       "      <td>0.893973</td>\n",
-       "      <td>0.007050</td>\n",
+       "      <td>0.893276</td>\n",
+       "      <td>0.007631</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>duration</th>\n",
-       "      <td>0.888858</td>\n",
-       "      <td>0.012165</td>\n",
+       "      <td>0.890179</td>\n",
+       "      <td>0.010728</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -3098,23 +3098,23 @@
       ],
       "text/plain": [
        "           accuracy      diff\n",
-       "job        0.901161  0.000138\n",
-       "education  0.901161  0.000138\n",
-       "balance    0.901161  0.000138\n",
-       "age        0.900885  0.000138\n",
-       "previous   0.901299  0.000276\n",
-       "day        0.901714  0.000691\n",
-       "campaign   0.901852  0.000829\n",
-       "pdays      0.902129  0.001106\n",
-       "marital    0.902267  0.001244\n",
-       "month      0.899779  0.001244\n",
-       "housing    0.902544  0.001521\n",
-       "contact    0.902544  0.001521\n",
-       "poutcome   0.893973  0.007050\n",
-       "duration   0.888858  0.012165"
+       "day        0.901017  0.000111\n",
+       "marital    0.900686  0.000221\n",
+       "education  0.900686  0.000221\n",
+       "pdays      0.900686  0.000221\n",
+       "age        0.901128  0.000221\n",
+       "campaign   0.900575  0.000332\n",
+       "job        0.901239  0.000332\n",
+       "previous   0.901239  0.000332\n",
+       "contact    0.900464  0.000442\n",
+       "balance    0.901460  0.000553\n",
+       "housing    0.901570  0.000664\n",
+       "month      0.899690  0.001217\n",
+       "poutcome   0.893276  0.007631\n",
+       "duration   0.890179  0.010728"
       ]
      },
-     "execution_count": 68,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3124,12 +3124,12 @@
     "df_feature_accuracy['diff'] = abs(orig_accuracy - df_feature_accuracy['accuracy'])\n",
     "df_feature_accuracy = df_feature_accuracy.sort_values(by='diff')\n",
     "df_feature_accuracy\n",
-    "# 5. difference between the original accuracy and the accuracy without the feature is minimum for balance feature."
+    "# 5. difference between the original accuracy and the accuracy without the feature is minimum for marital feature."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 66,
    "id": "92dd600d-e7e8-44c5-b7ec-664662b8253b",
    "metadata": {},
    "outputs": [],
@@ -3151,17 +3151,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 67,
    "id": "8f85a6a7-b998-49ba-bbf7-23b8ca318d75",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{0.01: 0.899, 0.1: 0.902, 1: 0.901, 10: 0.901, 100: 0.901}"
+       "{0.01: 0.898, 0.1: 0.901, 1: 0.901, 10: 0.901, 100: 0.9}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
