Fix code issue #mlzoomcamp

--- a/04-evaluation/homework.ipynb
+++ b/04-evaluation/homework.ipynb
@@ -1465,14 +1465,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 67,
    "id": "c170b1da-56f8-48f4-8613-04e999940cdc",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ed25c2375f914fe488b9e89594c2b5c1",
+       "model_id": "f052e44852d04a69b11a907df4fdf51c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1487,13 +1487,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$1e-06 -> Mean $0.701, STD $0.009\n"
+      "1e-06 -> Mean 0.701, STD 0.009\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f1d1d729cc5943bab1118d8b78ce2f2c",
+       "model_id": "47297d6903bf4e66a2748534847d3980",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1508,13 +1508,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "$0.001 -> Mean $0.861, STD $0.007\n"
+      "0.001 -> Mean 0.861, STD 0.007\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3041f38823fb47ff9ca14df675b7896d",
+       "model_id": "389b1c49a259484eb2e6576724baacb4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1524,6 +1524,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 -> Mean 0.906, STD 0.006\n"
+     ]
     }
    ],
    "source": [
@@ -1543,13 +1550,32 @@
     "        auc = roc_auc_score(y_val, y_pred)\n",
     "    \n",
     "        scores.append(auc)\n",
-    "    print (f'${C} -> Mean ${np.mean(scores).round(3)}, STD ${np.std(scores).round(3)}')"
+    "    print (f'{C} -> Mean {np.mean(scores).round(3)}, STD {np.std(scores).round(3)}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "a08d0f92-2286-4589-a9ad-0611b272a72f",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (168895807.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[68], line 1\u001b[0;36m\u001b[0m\n\u001b[0;31m    C = 1 leads to the best mean score\u001b[0m\n\u001b[0m          ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "C = 1 leads to the best mean score"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a08d0f92-2286-4589-a9ad-0611b272a72f",
+   "id": "99171050-adfc-4031-a618-146a708a5d8b",
    "metadata": {},
    "outputs": [],
    "source": []
